// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $20.00
    .
  </p>
</div>
`;

exports[`should match snapshot for more than 1 expense 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $40.00
    .
  </p>
</div>
`;
